# HaskyJSON

./: LICENSE  README.md  haskell-json.cabal
.github/workflows/: haskell.yml
src/: HaskyJSON.hs  JsonParser.hs  Parser.hs
test/: Main.hs
