cabal-version:      3.0
name:               HaskyJSON
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Alex Richardson
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HaskyJSON
    other-modules:    Parser
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hasky-json-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    Parser
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:
        base ^>=4.17.0.0,
        HUnit >=1.6.2.0
