cabal-version:      3.0
name:               HaskyJSON
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Alex Richardson
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HaskyJSON
    other-modules:    Parser
    build-depends:    base ^>=4.13.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hasky-json-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    Parser
    hs-source-dirs:   test, src
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:
        base ^>=4.13.0.0,
        HUnit >=1.6.2.0
